--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ before_install:
   - sudo apt-get install golang -y
   - git clone https://github.com/coreos/etcd
   - cd etcd && bash build
+  - bundle install --path .bundle
 rvm:
   - 1.9.3
   - 2.0.0
