invoke apt-get update before adding new repos

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 before_install: 
+  - sudo apt-get update -y
   - sudo add-apt-repository ppa:duh/golang -y
   - sudo apt-get update -y
   - sudo apt-get install golang -y
