--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,5 @@
 before_install:
-  - wget -c https://go.googlecode.com/files/go1.2.linux-amd64.tar.gz
-  - tar -zxf go1.2.linux-amd64.tar.gz
-  - git clone https://github.com/coreos/etcd
-  - cd etcd && env GOROOT=../go PATH=$PATH:../go/bin bash build
+  - bash build_etcd
   - bundle install --path .bundle
 rvm:
   - 1.9.3
