--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -10,3 +10,9 @@ Encoding:
 
 LineLength:
   Max: 100
+
+# Enforce old-school for ruby 1.8.7 (el6).
+#
+Style/HashSyntax:
+  Enabled: true
+  EnforcedStyle: hash_rockets
