resolve rubocop config changes in latest version
Resolves:

    AllCops/Includes was renamed to AllCops/Include

    Warning: Deprecated pattern style 'lib/**' in .rubocop.yml.
    Change to 'lib/**/*'

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,9 +1,9 @@
 AllCops:
-  Includes:
+  Include:
     - Gemfile
-    - lib/**
+    - lib/**/*
   Excludes:
-    - spec/**
+    - spec/**/*
 
 Encoding:
   Enabled: false
