--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,5 @@ rvm:
   - 2.2.0
 branches:
   only:
-    - master
+    - use_faraday
 script: "ETCD_BIN=./etcd-v2.0.0-rc.1-linux-amd64/etcd bundle exec rake spec"
